--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,6 +2,23 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.title {
+  margin-bottom: 32px;
+}
+
+ .box {
+  text-align: center;
+  width: 200px;
+  
+}
+
+.container {
+  display : flex;
+  justify-content: center;
+  gap: 52px;
+  
+}
+
 img {
   width: 100px;
   height: 100px;
@@ -10,6 +27,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
 
 /* do not edit this footer */
