--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -16,10 +16,34 @@ body {
 }
 
 .modal {
+  display: flex;
+  padding: 16px;
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+}
+
+.header {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+
+}
+
+.right-header {
+  display: flex;
+  justify-content: space-between;
+ 
+}
+
+.right {
+  margin-left: 15px;
+}
+
+
+.text {
+  margin-bottom: 15px;
 }
 
 .icon {
