--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   margin: 0;
   overflow: hidden;
@@ -16,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -25,3 +28,45 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+
+
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+  
+}
+
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+.header ul, .footer ul {
+  display: flex;
+  gap: 16px;
+  list-style-type: none;
+}
+
+.header a, .footer a {
+  text-decoration: none;
+  color: #666;
+  
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  
+}
+
+
+.footer {
+  background-color: #eee;
+}
+
