--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,15 +2,71 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
   height: 72px;
   background: darkmagenta;
   color: white;
+
+  font-weight: bold;
+  font-size: 25px;
+  
+  
+}
+
+
+.container {
+  display: flex;
+  flex: 1;
+  
+}
+
+.sidebar {
+  flex-shrink: 0;
+  padding: 15px;
+}
+
+.sidebar ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.sidebar li {
+  margin-bottom: 15px;
+}
+
+.sidebar a {
+  text-decoration: none;
+  color: white;
+  font-size: 25px;
+}
+
+
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 40px;
+  gap: 15px;
+}
+
+
+.card {
+  padding: 10px;
+  width: 300px;
+  height: 300px;
 }
 
 .footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
